fix scenario collaspse + box title collapse

--- a/assets/css/_fab.scss
+++ b/assets/css/_fab.scss
@@ -8,11 +8,11 @@
 }
 
 .fab-bis {
-  right: 80px;
+  right: 75px;
 }
 
 .fab-ter {
-  right: 140px;
+  right: 135px;
 }
 
 .fab-left {
